--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <input type="radio" id="D12" name="dice" value="D12"> D12<br><br>
       Enter number of dice:<br>
       <input type="text" id="numdice" name="numberdice"><br><br><br>
-      <input type="submit" id="letsroll" name="letsroll" value= "Lets Roll!">
     </form>
+    <button id="letsroll">Lets Roll!</button>
   </div>
   <div id="rollresult">
-    <p id="resultp"></p>
+    <p id="resultp">The result of your roll will appear here.</p>
   </div>
 <script src="RPGDiceRoller.js"></script>
 </body>
