--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <link rel="stylesheet" href="RPGDiceRoller.css">
 </head>
 <body>
+<div class="flex-container">
   <div id = "pagename">
     <h1>RPG Dice Roller</h1>
   </div>
   <div id = "picture">
   </div>
   <div id = "directions">
-    <p>This app will let you roll any number and type of dice while playing a tabletop role playing game! Click the button below to begin.</p>
+    <h2>This app will let you roll any number and type of dice while playing a tabletop role playing game!</h2>
   </div>
   <div id="setupdice">
-    <p>To begin, select the type and number of dice needed for the roll. Then click the roll button.</p>
+    <p>To begin, select the type and number of dice needed for the roll, and enter any modifier to be added to or subtracted from the dice. Then click the roll button.</p>
     <form>
       <input type="radio" id="D20" name="dice" value="D20" checked> D20<br>
       <input type="radio" id="D4" name="dice" value="D4"> D4<br>
@@ -23,13 +24,16 @@
       <input type="radio" id="D10" name="dice" value="D10"> D10<br>
       <input type="radio" id="D12" name="dice" value="D12"> D12<br><br>
       Enter number of dice:<br>
-      <input type="text" id="numdice" name="numberdice"><br><br><br>
+      <input type="text" id="numdice" name="numberdice" value="1"><br><br>
+      Enter any modifier for the roll:<br>
+      <input type="text" id="modifier" name="modifier" value="0"><br><br><br>
     </form>
     <button id="letsroll">Lets Roll!</button>
   </div>
   <div id="rollresult">
     <p id="resultp">The result of your roll will appear here.</p>
   </div>
+</div>
 <script src="RPGDiceRoller.js"></script>
 </body>
 </html>
