--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Enter any modifier for the roll:<br>
       <input type="text" id="modifier" name="modifier" value="0"><br><br><br>
     </form>
-    <button id="letsroll">Lets Roll!</button>
+    <button id="letsroll">Lets Roll!</button><br>
   </div>
   <div id="rollresult">
     <p id="resultp">The result of your roll will appear here.</p>
