--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>RPG Dice Roller</h1>
   </div>
   <div id = "picture">
-    <h2 id="intro">This app will let you roll any number and type of dice while playing a tabletop role playing game!</h2>
+    <h2 id="intro">With this app you can roll any number and type of dice while playing a tabletop role playing game!</h2>
   </div>
   <div id="setupdice">
     <h3>To begin, select the type and number of dice needed for the roll, and enter any modifier to be added to or subtracted from the dice. Then click the roll button.</h3>
@@ -27,7 +27,7 @@
       Enter any modifier for the roll:<br>
       <input type="text" id="modifier" name="modifier" value="0"><br><br><br>
     </form>
-    <button id="letsroll">Lets Roll!</button><br>
+    <button id="letsroll">Lets Roll!</button><br><br>
   </div>
   <div id="rollresult">
     <p id="resultp">The result of your roll will appear here.</p>
